# clemitui

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: format.rs  lib.rs  logging.rs  text_buffer.rs
tests/: acp_simulation_tests.rs  e2e_tests.rs
tests/common/: mod.rs
