[package]
name = "clemitui"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
description = "Terminal UI for ACP-compatible AI agents"
license = "MIT"
repository = "https://github.com/evansenter/clemitui"
readme = "README.md"
keywords = ["cli", "tui", "ai", "llm", "acp"]
categories = ["command-line-interface", "text-processing"]

[dependencies]
# Terminal formatting
colored = "2"
termimad = "0.30"

# Serialization (for tool args formatting)
serde_json = "1"

[dev-dependencies]
tempfile = "3.10"
expectrl = "0.7"

[[bin]]
name = "clemitui-demo"
path = "src/bin/demo.rs"
